# SongUtils

CppUtils/0_logger/: Logger.cpp  Logger.h  readme.txt
CppUtils/0_logger_v2/: TLogger.cpp  TLogger.h  TLoggerBase.h  readme.txt
CppUtils/1_vscodeConfigTemplate/: CMakeLists.txt  mul_thread.cpp  reMake.sh  readMe.txt
CppUtils/2_videoToImg/: CMakeLists--.txt  readme.txt  run.cpp
PythonScript/: 0_parserTest.py  10_pic2video.py  11_resizeImg.py  12_videoToImg.py  13_dataloaderTest.py  14_getFilename.py  15_binarySeg.py  16_Check_Image_MD5.py  16_sameImgMoveByName.py  17_cocoInstanceSegLabelDivide.py  17_cocoInstanceSegLabelMerge.py  17_cocoInstanceSegShow.py  19_carDefectAnysis.py  19_carDefectAug.py  19_carDefectHSV.py  19_moveImgbyTxt.py  1_imgNameListGen.py  2_fileLineCount.py  3_fileMove.py  3_txtLineShuffle.py  4_xmlCutROI.py  4_xml_to_txt.py  5_postfixChange.py  6_json_to_xml.py  7_baidu_photo_spider.py  7_bing_photo_spider.py  8_spider_Image_filter.py  9_imgAugmentation.py  9_img_Xml_Augment.py
